Minor updates/general modifications

--- a/LotteryPool/www/lib/angular/package.json
+++ b/LotteryPool/www/lib/angular/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "angular",
     "framework",
-    "browser",
+    "browsePoolsr",
     "client-side"
   ],
   "author": "Angular Core Team <angular-core+npm@google.com>",
